log
Sat 10 Sep 2022 01:15:13 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
657a4bb
Sat 10 Sep 2022 01:15:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
781f2ee
Sat 10 Sep 2022 01:48:03 AM UTC: 
 hashmap.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c:88:1: error: expected identifier or ‘(’ before ‘}’ token
   88 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
hashmap.c: In function ‘firstMap’:
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4bcb0c8
Sat 10 Sep 2022 01:48:23 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:87:3: error: expected identifier or ‘(’ before ‘return’
   87 |   return NULL;
      |   ^~~~~~
hashmap.c:88:1: error: expected identifier or ‘(’ before ‘}’ token
   88 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
hashmap.c: In function ‘firstMap’:
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8b6557
Sat 10 Sep 2022 01:48:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
49c1ea4
Sat 10 Sep 2022 01:48:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ec3078d
